@startuml
class Solution42 {
    - static ArrayList<ArrayList<String>> dataList
    }
    class ProcessCsvFile {
        - ArrayList<ArrayList<String>> dataList;
        + processCsv()
        + getDataFromRow()

    }
    class PrintResults {
        +  print()
        }
        Solution42 *-- ProcessCsvFile
        Solution42 *-- PrintResults

@enduml